    the taskmaster decides what Node to build next.

  - Changed the names of the old $WIN32DEFPREFIX, $WIN32DEFSUFFIX,
    $WIN32DLLPREFIX and $WIN32IMPLIBPREFIX construction variables to
    new $WINDOWSDEFPREFIX, $WINDOWSDEFSUFFIX, $WINDOWSDLLPREFIX and
    $WINDOWSIMPLIBPREFIX construction variables.  The old names are now
    deprecated, but preserved for backwards compatibility.

  From Chen Lee:

  - Add x64 support for Microsoft Visual Studio 8.

  From Baptiste Lepilleur:

  - Support the --debug=memory option on Windows when the Python version
    has the win32process and win32api modules.

  - Add support for Visual Studio 2005 Pro.

  - Fix portability issues in various tests: test/Case.py,
    Test/Java/{JAR,JARCHDIR,JARFLAGS,JAVAC,JAVACFLAGS,JAVAH,RMIC}.py,
    test/MSVS/vs-{6.0,7.0,7.1,8.0}-exec.py,
    test/Repository/{Java,JavaH,RMIC}.py,
    test/QT/{generated-ui,installed,up-to-date,warnings}.py,
    test/ZIP/ZIP.py.

  - Ignore pkgchk errors on Solaris when searching for the C++ compiler.

  - Speed up the SCons/EnvironmentTests.py unit tests.

  From Christian Maaser:

  - Add support for Visual Studio Express Editions.

  - Add support for Visual Studio 8 *.manifest files, includng
    new $WINDOWS_INSERT_MANIFEST, $WINDOWSPROGMANIFESTSUFFIX,
    $WINDOWSPROGMANIFESTPREFIX, $WINDOWSPROGMANIFESTSUFFIX,
    $WINDOWSSHLIBMANIFESTPREFIX and $WINDOWSSHLIBMANIFESTSUFFIX
    construction variables.

  From Adam MacBeth:

  - Fix detection of additional Java inner classes following use of a
    "new" keyword inside an inner class.

  From Sanjoy Mahajan:

  - Correct TeX-related command lines to just $SOURCE, not $SOURCES

  From Patrick Mezard:

  - Execute build commands for a command-line target if any of the
    files built along with the target is out of date or non-existent,
    not just if the command-line target itself is out of date.

  - Fix the -n option when used with -c to print all of the targets